# WeatherConsole

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  WeatherConsole
app_folder/: .gitignore
lib/: main.c
lib/api/: api_fetch_current.c  api_fetch_current.h  discord.h
lib/config/: config.c  config.h
lib/helper/: color_print.h  encrypt.c  encrypt.h  fetch_write_callback.h  file_writer.h  json_parser.c  json_parser.h  log.h  print_helper.c  print_helper.h  promt.c  promt.h  setup.c  setup.h  url_gen.h
lib/models/: models.h
